data/issues_nolabel/nolabel_test_12587.txt
[building tensorflow with bazel]Error:Constants.h:429:2: error: #error The preprocessor symbol 'Success' is defined

Environment information:

Ubuntu version: 14.04
bazel version: 0.5.1
tensorflow version:  r 1.1
cuda version: 8.0.44
cudnn version: 5.1.5
command: bazel build tensorflow/examples/PreProcess_modify

Describe the problem:

tensorflow/examples/PreProcess_modify/BUILD:10:1: C++ compilation of rule '//tensorflow/examples/PreProcess_modify:chartest' failed: gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG ... (remaining 130 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/Core:360:0,
from external/eigen_archive/unsupported/Eigen/CXX11/Tensor:14,
from ./third_party/eigen3/unsupported/Eigen/CXX11/Tensor:4,
from ./tensorflow/core/framework/tensor.h:19,
from ./tensorflow/cc/framework/ops.h:21,
from ./tensorflow/cc/ops/const_op.h:19,
from ./tensorflow/examples/PreProcess_modify/Tensorflow/TFClassifier.h:29,
from ./tensorflow/examples/PreProcess_modify/include/GameRecognize.h:14,
from ./tensorflow/examples/PreProcess_modify/GameRecog/CharRecognize.h:23,
from tensorflow/examples/PreProcess_modify/Projects/Src/chartest.cpp:13:
external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/src/Core/util/Constants.h:429:2: error: #error The preprocessor symbol 'Success' is defined, possibly by the X11 header file X.h
#error The preprocessor symbol 'Success' is defined, possibly by the X11 header file X.h
^
In file included from /usr/include/X11/Xlib.h:44:0,
from ./tensorflow/examples/PreProcess_modify/Os/TqcOs.h:21,
from tensorflow/examples/PreProcess_modify/Projects/Src/chartest.cpp:11:
external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/src/Core/util/Constants.h:436:3: error: expected identifier before numeric constant
Success = 0,
^
external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/src/Core/util/Constants.h:436:3: error: expected '}' before numeric constant
external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/src/Core/util/Constants.h:436:3: error: expected unqualified-id before numeric constant
In file included from external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/Core:360:0,
from external/eigen_archive/unsupported/Eigen/CXX11/Tensor:14,
from ./third_party/eigen3/unsupported/Eigen/CXX11/Tensor:4,
from ./tensorflow/core/framework/tensor.h:19,
from ./tensorflow/cc/framework/ops.h:21,
from ./tensorflow/cc/ops/const_op.h:19,
from ./tensorflow/examples/PreProcess_modify/Tensorflow/TFClassifier.h:29,
from ./tensorflow/examples/PreProcess_modify/include/GameRecognize.h:14,
from ./tensorflow/examples/PreProcess_modify/GameRecog/CharRecognize.h:23,
from tensorflow/examples/PreProcess_modify/Projects/Src/chartest.cpp:13:
external/eigen_archive/unsupported/Eigen/CXX11/../../../Eigen/src/Core/util/Constants.h:549:1: error: expected declaration before '}' token
} // end namespace Eigen
^
INFO: Elapsed time: 678.166s, Critical Path: 5.46s